bon/tests/integration/ui/compile_fail/map_macro.stderr
error: duplicate map key
  --> tests/integration/ui/compile_fail/map_macro.rs:14:9
   |
14 |         "Hello": "Mars",
   |         ^^^^^^^

warning: unused variable: `strings`
 --> tests/integration/ui/compile_fail/map_macro.rs:5:9
  |
5 |     let strings: HashMap<u64, String> = map! {
  |         ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_strings`
  |
  = note: `#[warn(unused_variables)]` on by default
